// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

package piecestoreroutes;

service PieceStoreRoutes {
  rpc Piece(PieceId) returns (PieceSummary) {}

  rpc Retrieve(stream PieceRetrieval) returns (stream PieceRetrievalStream) {}

  rpc Store(stream PieceStore) returns (PieceStoreSummary) {}

  rpc Delete(PieceDelete) returns (PieceDeleteSummary) {}

}

message BandwidthAllocation {
  message Data {
    string payer = 1;
    string renter = 2;
    int64 size = 3;
    int64 total = 4;
  }

  bytes signature = 1;
  Data data = 2;
}

message PieceStore {
  message PieceData {
    string id = 1;
    int64 ttl = 2;
    bytes content = 3;
  }

  BandwidthAllocation bandwidthallocation = 1;
  PieceData piecedata = 2;
}

message PieceId {
  string id = 1;
}

message PieceSummary {
  string id = 1;
  int64 size = 2;
  int64 expiration = 3;
}

message PieceRetrieval {
  message PieceData {
    string id = 1;
    int64 size = 2;
    int64 offset = 3;
  }

  BandwidthAllocation bandwidthallocation = 1;
  PieceData pieceData = 2;
}

message PieceRetrievalStream {
  int64 size = 1;
  bytes content = 2;
}

message PieceDelete {
  string id = 1;
}

message PieceDeleteSummary {
  string message = 1;
}

message PieceStoreSummary {
  string message = 1;
  int64 totalReceived = 2;
}
